--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal portfolio</title>
+  <title> Darrells Personal portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -35,7 +35,7 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">SathyaPrakash T</a></h1>
+      <h1><a href="index.html">Darrell Mucheri T</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2 class="typing-heading">I'm a passionate <span id="typing-span" class="uppercase">developer</span> from India</h2>
