--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Darrells Personal portfolio</title>
+  <title> Darrell's Personal portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
       <h1><a href="index.html">Darrell Mucheri T</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2 class="typing-heading">I'm a passionate <span id="typing-span" class="uppercase">developer</span> from India</h2>
+      <h2 class="typing-heading">I'm a passionate <span id="typing-span" class="uppercase">developer</span> from Zimbabwe</h2>
 
       <script src="script.js"></script>
 
@@ -55,9 +55,9 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="https://www.facebook.com/people/Sathya/pfbid0ZUwvuqehWs2Zuc76kuVhD2MHZe8YcQLMLy8UjzZMmcLqpxJaFhPXkgzgvpLh9pkBl/?mibextid=ZbWKwL" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/sathya_prakash77/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://in.linkedin.com/in/sathya-prakash-t-102105203" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100076324647092" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/mrfrankofc" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/darrell-mucheri-aa5969301" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -104,7 +104,7 @@
             </div>
           </div>
           <p>
-            Hey! I'm SathyaPrakash, currently completed my B.tech in Artificial Intelligence and Data Science. I've worked on projects related to the Cyber Security field, including Vulnerability Scanning , Bug Bounty tools and Machine leaning and deep Learning models and Full stack are Developed , the Internships are Completed related to this Domain.
+            Hey! I'm Darrell , currently completed my O levels . I've worked on projects related to the Web Design field, including MERN projects and deep Learning models.
 
           </p>
         </div>
